[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/main/ui/level-select/level-select-button.gd" type="Script" id=2]


[node name="Button" type="Button"]
margin_right = 72.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 80 )
theme = ExtResource( 1 )
text = "Level 1"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
